--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -42,6 +42,12 @@ jobs:
             ~/.cargo/git
           key: linux-${{ steps.toolchain.outputs.rustc_hash }}-rust-cov-${{ hashFiles('**/Cargo.lock') }}
 
+      # Set environment variables from secrets
+      - name: Set environment variables
+        run: |
+          echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> $GITHUB_ENV
+          echo "SERVER_ADDR=${{ secrets.SERVER_ADDR }}" >> $GITHUB_ENV
+
       # Run tests with all features
       - name: Test (cargo test)
         uses: actions-rs/cargo@v1
