feat(nalufx): :sparkles: add example of a bellwether stock analysis

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ debug = true
 [dependencies]
 # Dependencies are only used for building.
 actix-web = "4.6.0"
+chrono = "0.4.38"
 dotenv = "0.15.0"
 env_logger = "0.11.3"
 log = "0.4.21"
