--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,8 @@ linfa = "0.7.0"
 linfa-clustering = "0.7.0"
 log = "0.4.21"
 ndarray = "0.15.6"
+num-format = "0.4.4"
+prophet = "0.4.2"
 rand = "0.8.5"
 reqwest = { version = "0.12.4", features = ["json"] }
 serde = { version = "1.0.203", features = ["derive"] }
