--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,14 +42,13 @@ debug = true
 # Dependencies are only used for building.
 actix-web = "4.6.0"
 chrono = "0.4.38"
-dotenv = "0.15.0"
+dotenvy = "0.15.0"
 env_logger = "0.11.3"
 linfa = "0.7.0"
 linfa-clustering = "0.7.0"
 log = "0.4.21"
 ndarray = "0.15.6"
-num-format = "0.4.4"
-prophet = "0.4.2"
+augurs-ets = "0.1.2"
 rand = "0.8.5"
 reqwest = { version = "0.12.4", features = ["json"] }
 serde = { version = "1.0.203", features = ["derive"] }
