feat(nalufx): :sparkles: Add  Risk Parity Portfolio Optimization

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,7 +48,9 @@ env_logger = "0.11.3"
 linfa = "0.7.0"
 linfa-clustering = "0.7.0"
 log = "0.4.21"
+nalgebra = "0.32.5"
 ndarray = "0.15.6"
+ndarray-stats = "0.5.1"
 augurs-ets = "0.1.2"
 rand = "0.8.5"
 reqwest = { version = "0.12.4", features = ["json"] }
