--- a/Cargo.toml
+++ b/Cargo.toml
@@ -86,17 +86,18 @@ path = "examples/services/technical_analysis_indicators.rs"
 [dependencies]
 # Dependencies are only used for building.
 actix-web = "4.6.0"
+augurs-ets = "0.1.2"
 chrono = "0.4.38"
 csv = "1.3.0"
 dotenvy = "0.15.7"
 env_logger = "0.11.3"
+figlet-rs = "0.1.5"
 linfa = "0.7.0"
 linfa-clustering = "0.7.0"
 log = "0.4.21"
 nalgebra = "0.32.5"
 ndarray = "0.15.6"
 ndarray-stats = "0.5.1"
-augurs-ets = "0.1.2"
 rand = "0.8.5"
 reqwest = { version = "0.12.4", features = ["json"] }
 serde = { version = "1.0.203", features = ["derive"] }
