--- a/Cargo.toml
+++ b/Cargo.toml
@@ -96,6 +96,7 @@ csv = "1.3.0"
 dotenvy = "0.15.7"
 env_logger = "0.11.3"
 figlet-rs = "0.1.5"
+futures = "0.3.30"
 linfa = "0.7.0"
 linfa-clustering = "0.7.0"
 log = "0.4.21"
