fix(nalufx): :bug: Decouple LLM Selection and API Key Handling Logic
- Added functions to retrieve API keys for each LLM (e.g., OpenAI) in their respective modules. - Updated the main function in `automated_cash_allocation.rs` to dynamically select and initialize the appropriate LLM and API key based on user input. - Removed manual API key input from the user, automatically fetching it based on the selected LLM. - Ensured compatibility with various LLM implementations, preparing the system for potential future LLM integrations. - Refactored code to improve readability and maintainability by separating concerns and adhering to single-responsibility principles.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -91,6 +91,7 @@ path = "examples/services/technical_analysis_indicators.rs"
 # Dependencies are only used for building.
 actix-web = "4.6.0"
 augurs-ets = "0.1.2"
+async-trait = "0.1.80"
 chrono = "0.4.38"
 csv = "1.3.0"
 dotenvy = "0.15.7"
