--- a/deny.toml
+++ b/deny.toml
@@ -5,7 +5,19 @@ unlicensed = "deny"
 # List of explicitly allowed licenses
 # See https://spdx.org/licenses/ for list of possible licenses
 # [possible values: any SPDX 3.7 short identifier (+ optional exception)].
-allow = ["MPL-2.0"]
+allow = [
+    "Apache-2.0",
+    "Apache-2.0 WITH LLVM-exception",
+    "BSD-2-Clause",
+    "BSD-3-Clause",
+    "BSL-1.0",
+    "CC0-1.0",
+    "ISC",
+    "MIT",
+    "MPL-2.0",
+    "Unicode-DFS-2016",
+    "Zlib",
+]
 
 # List of explicitly disallowed licenses
 # See https://spdx.org/licenses/ for list of possible licenses
@@ -41,8 +53,7 @@ multiple-versions = "warn"
 highlight = "all"
 
 # List of crates that are allowed. Use with care!
-allow = [
-]
+allow = []
 
 # List of crates to deny
 deny = [
@@ -51,16 +62,13 @@ deny = [
 ]
 
 # Certain crates/versions that will be skipped when doing duplicate detection.
-skip = [
-]
+skip = []
 
 # Similarly to `skip` allows you to skip certain crates during duplicate detection,
 # unlike skip, it also includes the entire tree of transitive dependencies starting at
 # the specified crate, up to a certain depth, which is by default infinite
-skip-tree = [
-]
+skip-tree = []
 
 
 [advisories]
-ignore = [
-]
+ignore = []
