--- a/nalufx-core/Cargo.toml
+++ b/nalufx-core/Cargo.toml
@@ -8,6 +8,7 @@ include = ["src/**/*", "README.md"] # Files to include when publishing the packa
 # default-run = "nfx" # The default binary to run when using `cargo run`.
 version.workspace = true # The version is defined in the workspace.
 authors.workspace = true # Authors are defined in the workspace.
+build = "build.rs" # The build script is defined in the workspace.
 edition.workspace = true # The edition is defined in the workspace.
 exclude.workspace = true # Files to exclude are defined in the workspace.
 license.workspace = true # The license is defined in the workspace.
