fix(nalufx): :bug: fix release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: 🧪 Release
 on:
   push:
     branches:
-      - master
+      - main
       - feat/nalufx
   pull_request:
     branches:
@@ -18,7 +18,7 @@ concurrency:
 jobs:
   build:
     name: ❯ Build 🛠
-    if: github.ref == 'refs/heads/master' && github.event_name == 'push'
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     env:
       BUILD_ID: ${{ github.run_id }}
       CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_API_TOKEN }}
@@ -87,7 +87,7 @@ jobs:
 
   release:
     name: ❯ Release 🚀
-    if: github.ref == 'refs/heads/master' && github.event_name == 'push'
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     needs: build
     runs-on: ubuntu-latest
     steps:
@@ -160,7 +160,7 @@ jobs:
 
   crate:
     name: ❯ Crate.io 🦀
-    if: github.ref == 'refs/heads/master' && github.event_name == 'push'
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     needs: release
     runs-on: ubuntu-latest
     steps:
